replace all cJSON(rorerror with Newrorerror/GinLogErrorAbort
